--- a/1.2. GenReason LLM XRAY.ipynb
+++ b/1.2. GenReason LLM XRAY.ipynb
@@ -33,6 +33,9 @@
     "from tqdm import tqdm\n",
     "from transformers import AutoProcessor, AutoModelForImageTextToText\n",
     "from PIL import Image\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
     "\n",
     "def fix_broken_bullet_blocks(text):\n",
     "    lines = text.splitlines()\n",
@@ -88,7 +91,7 @@
    ],
    "source": [
     "model_id = \"/home/is/dwipraseetyo-a/NAS_HAI/Project/pretrain/medgemma-4b-it\"\n",
-    "auth_key = \"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\"\n",
+    "auth_key = os.getenv(\"HG_AUTH_KEY\")\n",
     "model = AutoModelForImageTextToText.from_pretrained(\n",
     "    model_id,\n",
     "    torch_dtype=torch.bfloat16,\n",
