Implement training script for GRPO with Qwen2.5-Omni-3B model and add wrapper for model loading and processing

--- a/2. Evaluate.ipynb
+++ b/2. Evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e44b1c73",
    "metadata": {},
    "outputs": [
@@ -60,70 +60,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "62c5f8aa",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading Model.... Using Offload Folder\n",
-      "Loading Model.... Using Flash Attention\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Unrecognized keys in `rope_scaling` for 'rope_type'='default': {'mrope_section'}\n",
-      "You are attempting to use Flash Attention 2 without specifying a torch dtype. This might lead to unexpected behaviour\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d18bddabcdb46ad9160147ebf0b5a80",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/is/dwipraseetyo-a/.venv/lib/python3.12/site-packages/awq/__init__.py:21: DeprecationWarning: \n",
-      "I have left this message as the final dev message to help you transition.\n",
-      "\n",
-      "Important Notice:\n",
-      "- AutoAWQ is officially deprecated and will no longer be maintained.\n",
-      "- The last tested configuration used Torch 2.6.0 and Transformers 4.51.3.\n",
-      "- If future versions of Transformers break AutoAWQ compatibility, please report the issue to the Transformers project.\n",
-      "\n",
-      "Alternative:\n",
-      "- AutoAWQ has been adopted by the vLLM Project: https://github.com/vllm-project/llm-compressor\n",
-      "\n",
-      "For further inquiries, feel free to reach out:\n",
-      "- X: https://x.com/casper_hansen_\n",
-      "- LinkedIn: https://www.linkedin.com/in/casper-hansen-804005170/\n",
-      "\n",
-      "  warnings.warn(_FINAL_DEV_MESSAGE, category=DeprecationWarning, stacklevel=1)\n"
+      "The image processor of type `Qwen2VLImageProcessor` is now loaded as a fast processor by default, even if the model checkpoint was saved with a slow processor. This is a breaking change and may produce slightly different outputs. To continue using the slow processor, instantiate this class with `use_fast=False`. Note that this behavior will be extended to all models in a future release.\n",
+      "You have video processor config saved in `preprocessor.json` file which is deprecated. Video processor configs should be saved in their own `video_preprocessor.json` file. You can rename the file or load and save the processor back which renames it automatically. Loading from `preprocessor.json` will be removed in v5.0.\n"
      ]
     }
    ],
    "source": [
-    "adapter_path = \"outputs/qwen25omni-3b-instructMedic-reasonllm-notallpresent-trl-sft-sentencetrans/checkpoint-500\"\n",
-    "model, processor = get_OmniModel(model_path=\"Qwen/Qwen2.5-Omni-3B\", processor_path=\"Qwen/Qwen2.5-Omni-3B\", adapter_path=adapter_path, \n",
-    "                                 use_flash_attention=True, only_processor=False, quantize_4bit=False, offload_folder=\"offload\", set_eval=True)\n",
+    "# model, processor = get_OmniModel(model_path=\"Qwen/Qwen2.5-Omni-3B\", processor_path=\"Qwen/Qwen2.5-Omni-3B\", adapter_path=\"outputs/qwen25omni-3b-instructMedic-reasonllm-notallpresent-trl-sft/checkpoint-500\", \n",
+    "#                                  use_flash_attention=True, only_processor=False, quantize_4bit=True, offload_folder=\"offload\", set_eval=True)\n",
     "\n",
-    "# processor = get_OmniModel(model_path=\"Qwen/Qwen2.5-Omni-3B\", processor_path=\"Qwen/Qwen2.5-Omni-3B\", adapter_path=adapter_path, \n",
-    "#                                   use_flash_attention=True, only_processor=True, quantize_4bit=True, offload_folder=\"offload\", set_eval=True)\n",
+    "processor = get_OmniModel(model_path=\"Qwen/Qwen2.5-Omni-3B\", processor_path=\"Qwen/Qwen2.5-Omni-3B\", adapter_path=\"outputs/qwen25omni-3b-instructMedic-reasonllm-notallpresent-trl-sft/checkpoint-500\", \n",
+    "                                  use_flash_attention=True, only_processor=True, quantize_4bit=True, offload_folder=\"offload\", set_eval=True)\n",
     "\n",
     "stopping_criteria = get_stoppingcrit(processor)\n",
     "\n",
@@ -156,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "b523cd8b",
    "metadata": {},
    "outputs": [
@@ -164,14 +119,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 25/25 [00:00<00:00, 68.81it/s]"
+      " 36%|████████████████████████████████████████████████████████████████████████▎                                                                                                                                | 9/25 [00:00<00:00, 79.32it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 25/25 [00:00<00:00, 80.85it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'role': 'system', 'content': [{'type': 'text', 'text': '\\nYou are an advanced medical assistant AI specialized in analyzing and diagnosing clinical conditions, capable of perceiving auditory and visual inputs. \\nYou can interpret and reason over various medical inputs, including auditory inputs, visual inputs, and patient symptoms, individually or in combination, depending on what is provided. \\nYour task is to analyze the given input, explain your reasoning, and give a possible diagnosis. \\nAlways respond in the following format:\\n\\n## ⚠️ Points to Review and Disclaimer\\n<If no auditory or visual input is provided>\\n\\n## 🧠 Overview\\n<Diagnosis sentence>\\n\\n## 📋 Observations\\n**Chest X-ray:**\\n<Your explanation based on the relevant visual input>\"\\n\\n**Symptoms:**\\n<Your explanation based on the input symptoms>\"\\n\\n**Audio:**\\n<Your explanation based on the input audio>\"\\n'}]}, {'role': 'user', 'content': [{'type': 'text', 'text': 'Considering all inputs image, sound, and symptoms, is this TB?.  Also, the patient presents with: height is 162.0, haemoptysis is no, night sweets is yes, chestpain is yes, shortbreath is yes, cigarretes perday is 1-10, tobacco use is current, cough productive is yes, hiv status is neg. Additional chest x-ray metadata include: Modality is DX, DistanceSourceToDetector is 1000.0, FieldOfViewDimensions is [350, 425], ImagerPixelSpacing is [0.15, 0.15], TargetExposureIndex is 876.0, Sensitivity is 938.0, PhotometricInterpretation is MONOCHROME1, Rows is 2336, Columns is 2836, PixelIntensityRelationshipSign is 1, WindowCenter is 1469.0, WindowWidth is 4095.0, RescaleIntercept is 0.0, RescaleSlope is 1.0.'}, {'type': 'audio', 'audio': '/home/is/dwipraseetyo-a/NAS_HAI/Datasets/cidrz/wavs/01-399-0803_3.wav', 'audio_start': 5.6, 'audio_end': 8.6}, {'type': 'image', 'image': <PIL.Image.Image image mode=L size=1024x944 at 0x7568843052E0>}]}, {'role': 'assistant', 'content': [{'type': 'text', 'text': \"From the given symptoms, cough sound, and x-ray, Let me Analyze your regrading your questions.\\n\\n*   All modalities are present.\\nThis is a preliminary interpretation based on given data and does not replace a comprehensive clinical evaluation.. A definitive diagnosis requires a additional clinical evaluation, including the physical examination findings, Cough Sound, Auscultation Sound, and imaging studies.\\n## 🧠 Overview\\nthe evidence suggests the patient has Tuberculosis.\\n\\n## 📋 Observations\\n**Symptoms:**\\n*   The symptoms presented strongly support a diagnosis of Tuberculosis (TB). The patient has a persistent cough lasting more than 4 weeks, which is a hallmark of TB, especially when it is productive. The presence of chest pain, shortness of breath, fever, night sweats, and significant weight loss all point towards an infectious process consistent with TB rather than other respiratory diseases. Although the patient does not exhibit hemoptysis, this is not uncommon in TB cases. Furthermore, the patient's low BMI indicates possible malnutrition and chronic illness, aligning with TB's potential effects. The HIV-negative status and current tobacco use don't preclude a diagnosis of TB, as TB can occur in immunocompetent individuals, particularly those with lifestyle factors like smoking that could affect lung health. Overall, the combination of symptoms aligns well with TB infection.\\n\\n**Chest X-ray:**\\n* Key Features\\n    *   **Interstitial Infiltrates:** The most prominent finding is the presence of interstitial infiltrates, particularly in the upper lobes. These appear as hazy opacities within the lung parenchyma, often with a reticular or nodular pattern. This pattern is highly suggestive of tuberculosis.\\n    *   **Cavitation:** Cavitary lesions are also present, particularly in the upper lobes. These are characterized by areas of air-filled space within the lung parenchyma, often surrounded by a thick, well-defined wall. Cavitation is a common feature of TB, especially in reactivation disease.\\n    *   **Fibrotic Changes:** There may be evidence of fibrotic changes, such as pleural thickening or reticular opacities in the lung parenchyma. These findings can be seen in chronic or advanced TB.\\n    *   **Lymphadenopathy:** Enlarged lymph nodes (lymphadenopathy) may be present, particularly in the hilar regions. This can be a sign of TB infection. \\n\\nThe chest X-ray findings are highly suggestive of tuberculosis. The presence of interstitial infiltrates, cavitation, and potentially fibrotic changes in the upper lobes, along with possible lymphadenopathy, strongly points towards this diagnosis. Further evaluation, such as sputum cultures and/or a biopsy, is recommended to confirm the diagnosis and determine the specific type of TB. \\n\\n\\n**Audio:**\\n*   Will be Implemented Soon\"}]}]\n"
+      "[{'role': 'system', 'content': [{'type': 'text', 'text': '\\nYou are an advanced medical assistant AI specialized in analyzing and diagnosing clinical conditions, capable of perceiving auditory and visual inputs. \\nYou can interpret and reason over various medical inputs, including auditory inputs, visual inputs, and patient symptoms, individually or in combination, depending on what is provided. \\nYour task is to analyze the given input, explain your reasoning, and give a possible diagnosis. \\nAlways respond in the following format:\\n\\n## ⚠️ Points to Review and Disclaimer\\n<If no auditory or visual input is provided>\\n\\n## 🧠 Overview\\n<Diagnosis sentence>\\n\\n## 📋 Observations\\n**Chest X-ray:**\\n<Your explanation based on the relevant visual input>\"\\n\\n**Symptoms:**\\n<Your explanation based on the input symptoms>\"\\n\\n**Audio:**\\n<Your explanation based on the input audio>\"\\n'}]}, {'role': 'user', 'content': [{'type': 'text', 'text': 'Considering all inputs image, sound, and symptoms, is this TB?.  Also, the patient presents with: height is 162.0, haemoptysis is no, night sweets is yes, chestpain is yes, shortbreath is yes, cigarretes perday is 1-10, tobacco use is current, cough productive is yes, hiv status is neg. Additional chest x-ray metadata include: Modality is DX, DistanceSourceToDetector is 1000.0, FieldOfViewDimensions is [350, 425], ImagerPixelSpacing is [0.15, 0.15], TargetExposureIndex is 876.0, Sensitivity is 938.0, PhotometricInterpretation is MONOCHROME1, Rows is 2336, Columns is 2836, PixelIntensityRelationshipSign is 1, WindowCenter is 1469.0, WindowWidth is 4095.0, RescaleIntercept is 0.0, RescaleSlope is 1.0.'}, {'type': 'audio', 'audio': '/home/is/dwipraseetyo-a/NAS_HAI/Datasets/cidrz/wavs/01-399-0803_3.wav', 'audio_start': 5.3, 'audio_end': 8.3}, {'type': 'image', 'image': <PIL.Image.Image image mode=L size=1024x944 at 0x7CACD3F0F290>}]}, {'role': 'assistant', 'content': [{'type': 'text', 'text': \"From the given symptoms, cough sound, and x-ray, Let me Analyze your regrading your questions.\\n\\n*   All modalities are present.\\nThis is a preliminary interpretation based on given data and does not replace a comprehensive clinical evaluation.. A definitive diagnosis requires a additional clinical evaluation, including the physical examination findings, Cough Sound, Auscultation Sound, and imaging studies.\\n## 🧠 Overview\\nthe evidence suggests the patient has Tuberculosis.\\n\\n## 📋 Observations\\n**Symptoms:**\\n*   The symptoms presented strongly support a diagnosis of Tuberculosis (TB). The patient has a persistent cough lasting more than 4 weeks, which is a hallmark of TB, especially when it is productive. The presence of chest pain, shortness of breath, fever, night sweats, and significant weight loss all point towards an infectious process consistent with TB rather than other respiratory diseases. Although the patient does not exhibit hemoptysis, this is not uncommon in TB cases. Furthermore, the patient's low BMI indicates possible malnutrition and chronic illness, aligning with TB's potential effects. The HIV-negative status and current tobacco use don't preclude a diagnosis of TB, as TB can occur in immunocompetent individuals, particularly those with lifestyle factors like smoking that could affect lung health. Overall, the combination of symptoms aligns well with TB infection.\\n\\n**Chest X-ray:**\\n* Key Features\\n    *   **Interstitial Infiltrates:** The most prominent finding is the presence of interstitial infiltrates, particularly in the upper lobes. These appear as hazy opacities within the lung parenchyma, often with a reticular or nodular pattern. This pattern is highly suggestive of tuberculosis.\\n    *   **Cavitation:** Cavitary lesions are also present, particularly in the upper lobes. These are characterized by areas of air-filled space within the lung parenchyma, often surrounded by a thick, well-defined wall. Cavitation is a common feature of TB, especially in reactivation disease.\\n    *   **Fibrotic Changes:** There may be evidence of fibrotic changes, such as pleural thickening or reticular opacities in the lung parenchyma. These findings can be seen in chronic or advanced TB.\\n    *   **Lymphadenopathy:** Enlarged lymph nodes (lymphadenopathy) may be present, particularly in the hilar regions. This can be a sign of TB infection. \\n\\nThe chest X-ray findings are highly suggestive of tuberculosis. The presence of interstitial infiltrates, cavitation, and potentially fibrotic changes in the upper lobes, along with possible lymphadenopathy, strongly points towards this diagnosis. Further evaluation, such as sputum cultures and/or a biopsy, is recommended to confirm the diagnosis and determine the specific type of TB. \\n\\n\\n**Audio:**\\n*   Will be Implemented Soon\"}]}]\n"
      ]
     },
     {
@@ -192,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "29e7d078",
    "metadata": {},
    "outputs": [],
@@ -204,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "61b38533",
    "metadata": {},
    "outputs": [
@@ -212,31 +174,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                                                                                                                 | 0/25 [00:16<?, ?it/s]"
+      "  0%|                                                                                                                                                                                                                 | 0/25 [00:01<?, ?it/s]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "From the provided symptoms and cough duration, Let me analyze your regrading your questions.\n",
-      "\n",
-      "## 🧠 Overview\n",
-      "No, this is not a case of Tuberculosis (TB).\n",
-      "\n",
-      "## 📋 Observations\n",
-      "**Symptoms:**\n",
-      "* The patient has a cough duration of more than 4 weeks, which is suggestive of a chronic respiratory condition. However, the absence of hemoptysis, fever, night sweats, and shortness of breath are key negative indicators for TB. Additionally, the patient's weight loss is a significant symptom, but it can be associated with various other conditions, including malnutrition, malignancies, or chronic infections. The patient's negative HIV status further reduces the likelihood of TB, as HIV-positive individuals are at a higher risk for developing TB. Therefore, while the symptoms are concerning, they do not strongly support a diagnosis of TB.\n",
-      "\n",
-      "**Audio:**\n",
-      "* No audio is provided.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'decoded' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 21\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m batch \u001b[38;5;129;01min\u001b[39;00m tqdm(test_loader):\n\u001b[32m      2\u001b[39m     \u001b[38;5;66;03m# batch = {\u001b[39;00m\n\u001b[32m      3\u001b[39m     \u001b[38;5;66;03m#     k: (v.to(model.device).to(model.dtype) if v.dtype.is_floating_point else v.to(model.device))\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     17\u001b[39m     \u001b[38;5;66;03m# torch.cuda.empty_cache()\u001b[39;00m\n\u001b[32m     18\u001b[39m     \u001b[38;5;66;03m# torch.cuda.ipc_collect()\u001b[39;00m\n\u001b[32m     19\u001b[39m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m21\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdecoded\u001b[49m[\u001b[32m0\u001b[39m])\n",
+      "\u001b[31mNameError\u001b[39m: name 'decoded' is not defined"
      ]
     }
    ],
