Refactor system prompt and reward functions; update training script and requirements

--- a/1.3. Gen Instruct.ipynb
+++ b/1.3. Gen Instruct.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "639c35f6",
    "metadata": {},
    "outputs": [
@@ -40,91 +40,40 @@
     "# Your task is to analyze the given input, and give a possible diagnosis. \n",
     "# '''\n",
     "\n",
-    "system_prompt = (\n",
-    "    \"A conversation between User and Advanced medical assistant specialized in analyzing and diagnosing clinical conditions. and the Assistant determines whether the case is Positive or Negative. The assistant \"\n",
-    "    \"first thinks about the reasoning process in the mind and then provides the user with the answer. The reasoning \"\n",
-    "    \"process and answer are enclosed within <think> </think> and <answer> </answer> tags, respectively, i.e., \"\n",
-    "    \"<think> reasoning process here </think><answer> answer here </answer>\"\n",
-    ")"
+    "# system_prompt = (\n",
+    "#     \"A conversation between User and Advanced medical assistant specialized in analyzing and diagnosing clinical conditions. and the Assistant determines whether the case is Positive or Negative. The assistant \"\n",
+    "#     \"first thinks about the reasoning process in the mind and then provides the user with the answer. The reasoning \"\n",
+    "#     \"process and answer are enclosed within <think> </think> and <answer> </answer> tags, respectively, i.e., \"\n",
+    "#     \"<think> reasoning process here </think><answer>answer here</answer>\"\n",
+    "# )\n",
+    "\n",
+    "system_prompt = '''\n",
+    "You are an advanced medical assistant AI specialized in analyzing and diagnosing clinical conditions, capable of perceiving auditory and visual inputs. \n",
+    "You can interpret and reason over various medical inputs, including auditory inputs, visual inputs, and patient symptoms, individually or in combination, depending on what is provided. \n",
+    "Your task is to analyze the given input, explain your reasoning, and give a possible diagnosis. \n",
+    "Always respond in the following format:\n",
+    "\n",
+    "## ⚠️ Points to Review and Disclaimer\n",
+    "<If no auditory or visual input is provided>\n",
+    "\n",
+    "## 🧠 Overview\n",
+    "<answer><Diagnosis sentence></answer>\n",
+    "\n",
+    "## 📋 Observations\n",
+    "**Chest X-ray:**\n",
+    "<Your explanation based on the relevant visual input>\"\n",
+    "\n",
+    "**Symptoms:**\n",
+    "<Your explanation based on the input symptoms>\"\n",
+    "\n",
+    "**Audio:**\n",
+    "<Your explanation based on the input audio>\"\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d9c14e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_conversation(example):\n",
-    "    conversation = [\n",
-    "        {\"role\": \"system\", \n",
-    "            \"content\": [{\"type\": \"text\", \"text\": system_prompt}]},\n",
-    "        {\n",
-    "            \"role\": \"user\",\n",
-    "            \"content\": [\n",
-    "                {\"type\": \"image\"},\n",
-    "                {\"type\": \"text\", \"text\": example[\"problem\"]},\n",
-    "            ],\n",
-    "        },\n",
-    "    ]\n",
-    "    prompt = processor.apply_chat_template(conversation, add_generation_prompt=True)\n",
-    "    return {\n",
-    "        \"prompt\": prompt,\n",
-    "        \"image\": example[\"image\"],\n",
-    "    }\n",
-    "\n",
-    "model_id = \"Qwen/Qwen2.5-Omni-3B\"\n",
-    "processor = AutoProcessor.from_pretrained(model_id, use_fast=True, padding_side=\"left\")\n",
-    "\n",
-    "train_dataset = train_dataset.map(make_conversation)\n",
-    "train_dataset = train_dataset.remove_columns(['problem', 'original_question', 'original_answer'])\n",
-    "print(train_dataset[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d584eb58",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dataset[0].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3cdfae1a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# system_prompt = '''\n",
-    "# You are an advanced medical assistant AI specialized in analyzing and diagnosing clinical conditions, capable of perceiving auditory and visual inputs. \n",
-    "# You can interpret and reason over various medical inputs, including auditory inputs, visual inputs, and patient symptoms, individually or in combination, depending on what is provided. \n",
-    "# Your task is to analyze the given input, explain your reasoning, and give a possible diagnosis. \n",
-    "# Always respond in the following format:\n",
-    "\n",
-    "# ## ⚠️ Points to Review and Disclaimer\n",
-    "# <If no auditory or visual input is provided>\n",
-    "\n",
-    "# ## 🧠 Overview\n",
-    "# <Diagnosis sentence>\n",
-    "\n",
-    "# ## 📋 Observations\n",
-    "# **Chest X-ray:**\n",
-    "# <Your explanation based on the relevant visual input>\"\n",
-    "\n",
-    "# **Symptoms:**\n",
-    "# <Your explanation based on the input symptoms>\"\n",
-    "\n",
-    "# **Audio:**\n",
-    "# <Your explanation based on the input audio>\"\n",
-    "# '''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "4e356703",
    "metadata": {},
    "outputs": [
@@ -237,8 +186,8 @@
     "                temp_instruct[\"messages\"][1]['content'].append({\"type\": \"image\", \"image\":array_df[1]})\n",
     "            instruct_array.append(temp_instruct)            \n",
     "            #df_temp.loc[len(df_temp)] = [now_row.barcode, question, answer, now_row.ground_truth_tb, now_audiopath, now_imgaepath]\n",
-    "    with open(f\"datas/instruct_grpo_balance.pkl.{split}\", \"wb\") as f:\n",
-    "        pickle.dump(instruct_array, f)\n",
+    "    # with open(f\"datas/instruct_grpo_balance.pkl.{split}\", \"wb\") as f:\n",
+    "    #     pickle.dump(instruct_array, f)\n",
     "    #pd.DataFrame(df_temp).to_csv(f'datas/grpo_balance.csv.{split}', index=False)"
    ]
   },
